# OmniMRS

./: README.md  pyproject.toml  run.py
docs/source/: conf.py
src/configurations/: __init__.py  auto_labeling_confs.py  environments.py  physics_confs.py  procedural_terrain_confs.py  rendering_confs.py  robot_confs.py  rock_generation_confs.py  stellar_engine_confs.py
src/environments/: base_env.py  large_scale_lunar.py  lunalab.py  lunaryard.py  rendering.py  rock_manager.py
src/environments_wrappers/: __init__.py
src/environments_wrappers/ros1/: __init__.py  base_wrapper_ros1.py  largescale_ros1.py  lunalab_ros1.py  lunaryard_ros1.py  simulation_manager_ros1.py
src/environments_wrappers/ros2/: __init__.py  base_wrapper_ros2.py  largescale_ros2.py  lunalab_ros2.py  lunaryard_ros2.py  robot_manager_ros2.py  simulation_manager_ros2.py
src/environments_wrappers/sdg/: lunalab_sdg.py  lunaryard_sdg.py  simulation_manager_sdg.py
src/labeling/: auto_label.py  instancer.py  rep_utils.py
src/physics/: physics_scene.py  terramechanics_parameters.py  terramechanics_solver.py
src/robots/: robot.py
src/stellar/: stellar_engine.py
src/terrain_management/: deformation_engine.py  terrain_generation.py  terrain_manager.py
src/terrain_management/large_scale_terrain/: collider_builder.py  collider_manager.py  crater_database.py  crater_distribution.py  crater_generation.py  geometry_clipmaps.py  geometry_clipmaps_manager.py  geometry_clipmaps_numba.py  geometry_clipmaps_warp.py  high_resolution_DEM_generator.py  high_resolution_DEM_workers.py  map_manager.py  (+6 more)
